--- a/language/resource.language.en_au/strings.po
+++ b/language/resource.language.en_au/strings.po
@@ -36,6 +36,10 @@ msgctxt "#31020"
 msgid "Actions"
 msgstr "Actions"
 
+msgctxt "#31051"
+msgid "Toggle language"
+msgstr "Toggle language"
+
 msgctxt "#31038"
 msgid "Rewind"
 msgstr "Rewind"
@@ -63,3 +67,23 @@ msgstr "Local subtitle available"
 msgctxt "#31100"
 msgid "Shift"
 msgstr "Shift"
+
+msgctxt "#31171"
+msgid "Show movie certification ratings"
+msgstr "Show movie certification ratings"
+
+msgctxt "#31172"
+msgid "Show TV show certification ratings"
+msgstr "Show TV show certification ratings"
+
+msgctxt "#31173"
+msgid "Display certification rating on TV show poster"
+msgstr "Display certification rating on TV show poster"
+
+msgctxt "#31174"
+msgid "Display certification rating on season poster"
+msgstr "Display certification rating on season poster"
+
+msgctxt "#31175"
+msgid "Display certification rating on episode thumbnail"
+msgstr "Display certification rating on episode thumbnail"
