--- a/language/resource.language.en_nz/strings.po
+++ b/language/resource.language.en_nz/strings.po
@@ -192,6 +192,10 @@ msgctxt "#31046"
 msgid "Delete group"
 msgstr "Delete group"
 
+msgctxt "#31047"
+msgid "Display certification rating on TV show poster"
+msgstr "Display certification rating on TV show poster"
+
 msgctxt "#31048"
 msgid "Available"
 msgstr "Available"
@@ -555,3 +559,23 @@ msgstr "Play your personal games or download one of the many game add-ons from t
 msgctxt "#31163"
 msgid "Show Fanart background"
 msgstr "Show Fanart background"
+
+msgctxt "#31171"
+msgid "Show movie certification ratings"
+msgstr "Show movie certification ratings"
+
+msgctxt "#31172"
+msgid "Show TV show certification ratings"
+msgstr "Show TV show certification ratings"
+
+msgctxt "#31173"
+msgid "Display certification rating on TV show poster"
+msgstr "Display certification rating on TV show poster"
+
+msgctxt "#31174"
+msgid "Display certification rating on season poster"
+msgstr "Display certification rating on season poster"
+
+msgctxt "#31175"
+msgid "Display certification rating on episode thumbnail"
+msgstr "Display certification rating on episode thumbnail"
